[metadata]
name = lintipy
author = Johannes Hoppe
author-email = info@johanneshoppe.com
summary = Run python based static file linters on AWS lambda.
description-file = README.rst
home-page = https://github.com/lambda-lint/lintipy
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    linter
    lambda
    aws
    amazon

[files]
packages =
    lintipy

[pbr]
skip_authors = true
skip_changelog = true
