[metadata]
name = lintipy
author = Johannes Hoppe
author_email = info@johanneshoppe.com
description = Run python based static file linters on AWS lambda.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lambda-lint/lintipy
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    linter
    lambda
    aws
    amazon

[options]
install_requires =
    ## boto is pre-installed on aws lambda
    # boto3
    cryptography
    PyJWT>=2.0.0
    requests
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    boto3
    httpretty
    pytest
    pytest-sugar
    pytest-cov

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=lintipy --cov-report xml

[flake8]
max-line-length=99
exclude = venv,.tox,.eggs

[pydocstyle]
add_ignore = D1

[isort]
atomic = true
line_length = 99
known_first_party = tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
